Fixed search icon spacing issues

--- a/_working_files/page_templates/css/main.css
+++ b/_working_files/page_templates/css/main.css
@@ -263,9 +263,10 @@ label {
   margin-right: 0.75em;
 }
 
-/* Search Bar*/
+/* Search Icon*/
 .search {
   max-width: 25px;
+  max-height: 25px;
 }
 
 /* Hover and focus states */
